<resources>
    <string name="app_name">HashGeneratorApp</string>
    <string name="welcome">WELCOME</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Dont have an account?</string>
    <string name="error_login">Username or Password incorrect</string>
    <string name="sign_in">SIGN UP</string>
    <string name="create">Create</string>
    <string name="welcome_back_nuser">Welcome back,</string>
    <string name="generate_new_hash">GENERATE NEW HASH</string>
    <string name="your_hash_history">YOUR HASH HISTORY</string>
    <string name="you_can_create_new_hash">You can create new hash,</string>
    <string name="just_choose_hashing_type_and_we_convert_it_for_you">Just choose hashing type and we convert it for you</string>
    <string name="you_can_copy_saved_hash">You can copy saved hash</string>
    <string name="with_one_click_you_can_copy_hash_that_you_created">With one click you can copy hash that you created</string>
    <string name="tag">Tag</string>
    <string name="tag_your_hash">Tag your hash</string>
    <string name="type_here">Type here</string>
    <string name="generate">Generate</string>
    <string name="create_new_hash">Create new hash</string>
    <string name="tag_for_copy_this_hash_later">Tag for copy this hash later</string>
    <string name="select_which_hashing_algorithm_to_use">Select which hashing algorithm to use</string>
    <string name="type_you_want_to_convert">Type you want to convert</string>
    <string name="sha_256">SHA-256</string>
    <string name="your_hash_history_list">Your hash history</string>
    <string name="your_hash_s_tag">Your hash\'s tag</string>
    <string name="textview">TextView</string>
    <string name="more">more</string>
    <string name="sign_out">Sign out</string>
    <string name="sections">sections</string>

    <string-array name="hash_algorithms">
        <item>SHA-256</item>
        <item>SHA-512</item>
        <item>MD5</item>
    </string-array>
</resources>